# test-uv

./: pyproject.toml
.github/workflows/: setup-uv.yml
src/setup_uv_from_url/: __init__.py
